# SwigCppToPython

./: .gitignore  CMakeLists.txt  README.md  Rectangle.cpp  Rectangle.i  _Rectangle.pyd  build_linux.sh  build_windows.bat
Test/: run_test_linux.sh  run_test_windows.bat  test.py
include/: Rectangle.h
output/: RectanglePYTHON_wrap.cxx  _Rectangle.pyd
test/: Rectangle.py  run_test_linux.sh  run_test_windows.bat  test.py
